# opt-einsum-path

./: .gitignore  CHANGELOG  Cargo.toml  readme.md
.github/workflows/: test.yml
src/: blas.rs  contract.rs  contract_path.md  helper.rs  helpers.rs  lib.rs  parser.rs  paths.rs  typing.rs
src/paths/: branch_bound.rs  dp.rs  greedy.rs  greedy_random.rs  mod.rs  no_optimize.rs  optimal.rs  util.rs
tests/: example.rs  test_blas.rs  test_helpers.rs  test_parser.rs  test_paths.rs  testing.rs  timing.rs
