[package]
name = "opt-einsum-path"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = { version = "1.5" }
itertools = { version = "0.14" }
rand = { version = "0.9" }
num = { version = "0.4" }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
rstest = { version = "0.26" }

[features]
par_rand = ["dep:rayon"]

[profile.dev]
opt-level = 2

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
