[package]
name = "opt-einsum-path"
version = "0.2.0"
edition = "2021"
description = "Einsum path optimization for tensor contraction (opt_einsum in Rust, without contraction)"
readme = "readme.md"

repository = "https://github.com/RESTGroup/opt-einsum-path"
keywords = ["scientific", "einsum", "chemistry", "physics", "tensor"]
categories = ["science"]
license = "Apache-2.0"
rust-version = "1.82"

[dependencies]
lazy_static = { version = "1.5" }
itertools = { version = "0.14" }
rand = { version = "0.9" }
num = { version = "0.4" }
duplicate = { version = "2.0" }
rayon = { version = "1.11", optional = true }

[dev-dependencies]
rstest = { version = "0.26" }

[features]
default = []
par_rand = ["dep:rayon"]

[profile.dev]
opt-level = 2

[package.metadata.docs.rs]
features = ["default"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
